# Lunar-Editor

./: .gitignore  Cargo.toml  README.md  build.rs  fix.py  fix_lunar_editor.py
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
scripts/: build.sh
src/: main.rs
src/app/: editor_app.rs  mod.rs  modes.rs  theme.rs
src/editor/: mod.rs
src/editor/editor_2d/: mod.rs  render.rs  scene.rs  tools.rs
src/editor/editor_3d/: camera.rs  gizmo.rs  loader.rs  mod.rs  render.rs  scene.rs
src/editor/text_editor/: buffer.rs  input.rs  mod.rs  render.rs
src/editor/text_editor/syntax/: json.rs  lunar.rs  mod.rs  rust.rs
src/lunar_engine/: ast.rs  lexer.rs  mod.rs  parser.rs  rust.rs
src/lunar_engine/vm/: bytecode.rs  interpreter.rs  mod.rs
src/plugin_system/: mod.rs  permissions.rs  plugin_manager.rs  wasm_host.rs
src/plugin_system/api/: editor_api.rs  fs_api.rs  lunar_api.rs  mod.rs  render_api.rs  scene_api.rs
src/project/: asset_manager.rs  mod.rs  project_manager.rs
src/render_backend/: mod.rs  pipeline.rs  wgpu_backend.rs
src/render_backend/shaders/: 3d.wgsl  ui.wgsl
src/ui/: docks.rs  file_tree.rs  mod.rs  toolbars.rs
src/ui/widgets/: button.rs  glow.rs  mod.rs  panel.rs  tree.rs
src/utils/: license_check.rs  memory.rs  mod.rs  performance.rs
